<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="SPOTIFY_STREAMER">SPOTIFY STREAMER</string>
    <string name="SCORES_APP">SCORES APP</string>
    <string name="LIBRARY_APP">LIBRARY APP</string>
    <string name="BUILD_IT_BIGGER">BUILD IT BIGGER</string>
    <string name="XYZ_READER">XYZ READER</string>
    <string name="CAPSTONE_MY_OWN_APP">CAPSTONE: MY OWN APP</string>
    <string name="MAIN_TITLE">My Nanodegree Apps!</string>
    <string name="MY_MAIN_TITLE">My Nanodegree Apps!</string>
</resources>
