<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.myappportfolio.app.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MY_MAIN_TITLE"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="24dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/SPOTIFY_STREAMER"
        android:id="@+id/spotify_streamer"
        android:background="#F08C35"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="false"
        android:onClick="showToastMessage" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/SCORES_APP"
        android:id="@+id/scores_app"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/spotify_streamer"
        android:layout_centerHorizontal="true"
        android:onClick="showToastMessage" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/LIBRARY_APP"
        android:id="@+id/library_app"
        android:background="#F08C35"
        android:layout_below="@+id/scores_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="showToastMessage" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/BUILD_IT_BIGGER"
        android:id="@+id/build_it_bigger"
        android:background="#F08C35"
        android:layout_below="@+id/library_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="showToastMessage" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/XYZ_READER"
        android:id="@+id/xyz_reader"
        android:background="#F08C35"
        android:onClick="showToastMessage"
        android:layout_below="@+id/build_it_bigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/CAPSTONE_MY_OWN_APP"
        android:id="@+id/capstone_my_own_app"
        android:background="#f0353e"
        android:textColor="#ffffff"
        android:onClick="showToastMessage"
        android:layout_below="@+id/xyz_reader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
